# screen-invert-filter-open

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows-build.yml
src/: main.cpp
